    + Fixed Use UTF-16LE encoding for XLS sheet names, and UTF-8 as input encoding (#3977);
    + Fixed Update login_form.php for installation inside subdir (#3954);
    + Fixed php8 constructor fix for radius class (#3985);
    + Fixed Force mac address update during status update scan (#3791);
    + Fixed RADIUS authentication fails on 1.6.0 (#3986);
    + Fixed cannot add NAT issue (#3993);

    Enhancements, changes:
    ----------------------------
    + Added support for redundant PowerDNS databases (#3981);
    + Added option to export data for VLAN,VRF and Devices directly from tools page;
    + Added option to disable OpenStreetMap address geoip lookups;
    + Added $api_stringify_results config.php option for <PHP81 API backwards compatibility;

    Security Fixes:
    ----------------------------
    + Upgraded jQuery to 3.7.1;
    + Cookies set without Secure attribute;
    + Multiple XSS injections (#4145,#4146,#4147,#4148,#4149.#4150,#4151);
    + HTML DOM XSS injection via filenames when uploading (#4160);

== 1.6.0

    Enhancements, changes:
    ----------------------------
    + php8.4 compatibility;;
    + MySQL 5.5.3+ is now required (support for utf8mb4);

    Security Fixes:
    ----------------------------
    + SQL injection in custom field enum/set types;
    + Directory traversal possible in RIPE query;
    + XSS (reflected) in 'bw-calulator-result.php';
    + XSS (reflected) by invalid email address response;
    + XSS (reflected) by /app/tools/subnet-masks/popup.php (#3738);
    + XSS (stored) in user widget settings;
    + XSS and LDAP injection in ad-search-result.php;
    + XSS and LDAP injection in ad-search-group-result.php;
    + Restrict find_full_subnets.php to CLI;
    + Ensure confidentiality of database password;

== 1.5.0

    New features:
    ------------
    + Mark subnet as isPool to allocate network and broadcast addresses;
    + Optionally hide section subnet menus;
    + L2 Domains user permissions;